deploy: 3b78dc4a5a43c926a1f3e0f26cfe1e250043e4f7

--- a/neorv32__cfu_8c.html
+++ b/neorv32__cfu_8c.html
@@ -90,7 +90,7 @@ Functions</h2></td></tr>
 <dl class="section warning"><dt>Warning</dt><dd>There are no "real" CFU driver functions available here, because these functions are defined by the actual hardware. </dd>
 <dd>
 Hence, the CFU designer has to provide the actual driver functions.</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the CFU0/CFU1 was synthesized (IO_CFU0_USE/IO_CFU1_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the CFU0/CFU1 was synthesized (IO_CFU0_EN/IO_CFU1_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a6c0dd9aa6f98e362d5a9b355cd0a6127"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a6c0dd9aa6f98e362d5a9b355cd0a6127">&#9670;&nbsp;</a></span>neorv32_cfu0_available()</h2>
