--- a/neorv32__mtime_8h.html
+++ b/neorv32__mtime_8h.html
@@ -93,7 +93,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>Machine System Timer (MTIME) HW driver header file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the MTIME unit was synthesized (IO_MTIME_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the MTIME unit was synthesized (IO_MTIME_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="ab2b49a0594c66692aedf76ff9935581c"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#ab2b49a0594c66692aedf76ff9935581c">&#9670;&nbsp;</a></span>neorv32_mtime_available()</h2>
