--- a/neorv32__pwm_8c.html
+++ b/neorv32__pwm_8c.html
@@ -91,7 +91,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>Pulse-Width Modulation Controller (PWM) HW driver source file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the PWM unit was synthesized (IO_PWM_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the PWM unit was synthesized (IO_PWM_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="afb12c860b2f7fa6cd1e069ea540da41c"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#afb12c860b2f7fa6cd1e069ea540da41c">&#9670;&nbsp;</a></span>neorv32_pwm_available()</h2>
