--- a/neorv32__spi_8c.html
+++ b/neorv32__spi_8c.html
@@ -97,7 +97,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>Serial peripheral interface controller (SPI) HW driver source file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the SPI unit was synthesized (IO_SPI_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the SPI unit was synthesized (IO_SPI_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a7266ee439d0ec11c5cedd4bf1a258272"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a7266ee439d0ec11c5cedd4bf1a258272">&#9670;&nbsp;</a></span>neorv32_spi_available()</h2>
