--- a/md_README.html
+++ b/md_README.html
@@ -284,7 +284,7 @@ NEORV32 CPU Features</h3>
 <li>Additional machine CSRs: <code>mhpmevent*</code>(3..31) <code>[m]hpmcounter*[h]</code>(3..31)</li>
 </ul>
 <h3><a class="anchor" id="autotoc_md9"></a>
-:warning: Non-RISC-V-Compliant Issues</h3>
+:warning: Non-RISC-V-Compliant Issues and Limitations</h3>
 <ul>
 <li>CPU and Processor are BIG-ENDIAN, but this should be no problem as the external memory bus interface provides big- and little-endian configurations</li>
 <li><code>misa</code> CSR is read-only - no dynamic enabling/disabling of synthesized CPU extensions during runtime; for compatibility: write accesses (in m-mode) are ignored and do not cause an exception</li>
