--- a/neorv32_8h.html
+++ b/neorv32_8h.html
@@ -2576,39 +2576,39 @@ Enumerations</h2></td></tr>
 </div><div class="memdoc">
 <p>SYSINFO_FEATURES (r/-): Implemented processor devices/features </p>
 <table class="fieldtable">
-<tr><th colspan="2">Enumerator</th></tr><tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18dab4535d2a5b0c61c921d7ed7f11950724"></a>SYSINFO_FEATURES_BOOTLOADER&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (0) (r/-): Bootloader implemented when 1 (via BOOTLOADER_USE generic) </p>
+<tr><th colspan="2">Enumerator</th></tr><tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18dab4535d2a5b0c61c921d7ed7f11950724"></a>SYSINFO_FEATURES_BOOTLOADER&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (0) (r/-): Bootloader implemented when 1 (via BOOTLOADER_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da21dcbf330cea8fadb26db83683a6caf8"></a>SYSINFO_FEATURES_MEM_EXT&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (1) (r/-): External bus interface implemented when 1 (via MEM_EXT_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da21dcbf330cea8fadb26db83683a6caf8"></a>SYSINFO_FEATURES_MEM_EXT&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (1) (r/-): External bus interface implemented when 1 (via MEM_EXT_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da31bd8db9fb2b6de4f8772bca670d185c"></a>SYSINFO_FEATURES_MEM_INT_IMEM&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (2) (r/-): Processor-internal instruction memory implemented when 1 (via MEM_INT_IMEM_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da31bd8db9fb2b6de4f8772bca670d185c"></a>SYSINFO_FEATURES_MEM_INT_IMEM&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (2) (r/-): Processor-internal instruction memory implemented when 1 (via MEM_INT_IMEM_EN generic) </p>
 </td></tr>
 <tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da1795e36ce5fe37dbde2b74853fdd23ec"></a>SYSINFO_FEATURES_MEM_INT_IMEM_ROM&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (3) (r/-): Processor-internal instruction memory implemented as ROM when 1 (via MEM_INT_IMEM_ROM generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18daeb507738ef80ff1cb73f4fc2733cf074"></a>SYSINFO_FEATURES_MEM_INT_DMEM&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (4) (r/-): Processor-internal data memory implemented when 1 (via MEM_INT_DMEM_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18daeb507738ef80ff1cb73f4fc2733cf074"></a>SYSINFO_FEATURES_MEM_INT_DMEM&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (4) (r/-): Processor-internal data memory implemented when 1 (via MEM_INT_DMEM_EN generic) </p>
 </td></tr>
 <tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da3a3ae184e4396c5d914fa4934bbb9994"></a>SYSINFO_FEATURES_MEM_EXT_ENDIAN&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (5) (r/-): External bus interface uses BIG-endian byte-order when 1 (via package.xbus_big_endian_c constant) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da3107a7353f48e3fc166b5bfac479b8cf"></a>SYSINFO_FEATURES_ICACHE&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (6) (r/-): Processor-internal instruction cache implemented when 1 (via ICACHE_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da3107a7353f48e3fc166b5bfac479b8cf"></a>SYSINFO_FEATURES_ICACHE&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (6) (r/-): Processor-internal instruction cache implemented when 1 (via ICACHE_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da28d81c67513c62f0c5da4a80f8f80e7c"></a>SYSINFO_FEATURES_IO_GPIO&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (16) (r/-): General purpose input/output port unit implemented when 1 (via IO_GPIO_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da28d81c67513c62f0c5da4a80f8f80e7c"></a>SYSINFO_FEATURES_IO_GPIO&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (16) (r/-): General purpose input/output port unit implemented when 1 (via IO_GPIO_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da9504bfe0f793e3cc01a69aad4a61e696"></a>SYSINFO_FEATURES_IO_MTIME&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (17) (r/-): Machine system timer implemented when 1 (via IO_MTIME_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da9504bfe0f793e3cc01a69aad4a61e696"></a>SYSINFO_FEATURES_IO_MTIME&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (17) (r/-): Machine system timer implemented when 1 (via IO_MTIME_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da310dd230c346fc33e32782481766f2ec"></a>SYSINFO_FEATURES_IO_UART&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (18) (r/-): Universal asynchronous receiver/transmitter implemented when 1 (via IO_UART_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da310dd230c346fc33e32782481766f2ec"></a>SYSINFO_FEATURES_IO_UART&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (18) (r/-): Universal asynchronous receiver/transmitter implemented when 1 (via IO_UART_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da8cf1612b8328feed402785994ecc3af8"></a>SYSINFO_FEATURES_IO_SPI&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (19) (r/-): Serial peripheral interface implemented when 1 (via IO_SPI_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da8cf1612b8328feed402785994ecc3af8"></a>SYSINFO_FEATURES_IO_SPI&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (19) (r/-): Serial peripheral interface implemented when 1 (via IO_SPI_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da25d7b51ee51263c0bccbd395697414f1"></a>SYSINFO_FEATURES_IO_TWI&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (20) (r/-): Two-wire interface implemented when 1 (via IO_TWI_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da25d7b51ee51263c0bccbd395697414f1"></a>SYSINFO_FEATURES_IO_TWI&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (20) (r/-): Two-wire interface implemented when 1 (via IO_TWI_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da1585c76a9a36be3a87e4ff559619d15e"></a>SYSINFO_FEATURES_IO_PWM&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (21) (r/-): Pulse-width modulation unit implemented when 1 (via IO_PWM_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da1585c76a9a36be3a87e4ff559619d15e"></a>SYSINFO_FEATURES_IO_PWM&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (21) (r/-): Pulse-width modulation unit implemented when 1 (via IO_PWM_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da48cbde9508244695c3047b0f557ad3cc"></a>SYSINFO_FEATURES_IO_WDT&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (22) (r/-): Watchdog timer implemented when 1 (via IO_WDT_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da48cbde9508244695c3047b0f557ad3cc"></a>SYSINFO_FEATURES_IO_WDT&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (22) (r/-): Watchdog timer implemented when 1 (via IO_WDT_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18dae35c3d30830d029723b01d1e11cea205"></a>SYSINFO_FEATURES_IO_CFU0&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (23) (r/-): Custom functions unit 0 implemented when 1 (via IO_CFU0_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18dae35c3d30830d029723b01d1e11cea205"></a>SYSINFO_FEATURES_IO_CFU0&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (23) (r/-): Custom functions unit 0 implemented when 1 (via IO_CFU0_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da7348e207ac6329a426d58febeae12e20"></a>SYSINFO_FEATURES_IO_TRNG&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (24) (r/-): True random number generator implemented when 1 (via IO_TRNG_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da7348e207ac6329a426d58febeae12e20"></a>SYSINFO_FEATURES_IO_TRNG&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (24) (r/-): True random number generator implemented when 1 (via IO_TRNG_EN generic) </p>
 </td></tr>
-<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da32965bc955c268aa563a14173b24cf65"></a>SYSINFO_FEATURES_IO_CFU1&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (25) (r/-): Custom functions unit 1 implemented when 1 (via IO_CFU1_USE generic) </p>
+<tr><td class="fieldname"><a id="a7c2df941d0405641ae6c4c9c8b4cb18da32965bc955c268aa563a14173b24cf65"></a>SYSINFO_FEATURES_IO_CFU1&#160;</td><td class="fielddoc"><p>SYSINFO_FEATURES (25) (r/-): Custom functions unit 1 implemented when 1 (via IO_CFU1_EN generic) </p>
 </td></tr>
 </table>
 
