--- a/neorv32__gpio_8h.html
+++ b/neorv32__gpio_8h.html
@@ -99,7 +99,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>General purpose input/output port unit (GPIO) HW driver header file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the GPIO unit was synthesized (IO_GPIO_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the GPIO unit was synthesized (IO_GPIO_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a41d39a41ba5879eb85d3ed4481fcff81"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a41d39a41ba5879eb85d3ed4481fcff81">&#9670;&nbsp;</a></span>neorv32_gpio_available()</h2>
