--- a/neorv32__trng_8c.html
+++ b/neorv32__trng_8c.html
@@ -91,7 +91,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>True Random Number Generator (TRNG) HW driver source file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the TRNG unit was synthesized (IO_TRNG_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the TRNG unit was synthesized (IO_TRNG_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="af0c4139ff68763623b3d658a8dd8b5ce"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#af0c4139ff68763623b3d658a8dd8b5ce">&#9670;&nbsp;</a></span>neorv32_trng_available()</h2>
