--- a/neorv32__twi_8h.html
+++ b/neorv32__twi_8h.html
@@ -103,7 +103,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>Two-Wire Interface Controller (TWI) HW driver header file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the TWI unit was synthesized (IO_TWI_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the TWI unit was synthesized (IO_TWI_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="aa2e01ebbc0c82d65ed4ded351f4d8711"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#aa2e01ebbc0c82d65ed4ded351f4d8711">&#9670;&nbsp;</a></span>neorv32_twi_available()</h2>
