--- a/neorv32__uart_8c.html
+++ b/neorv32__uart_8c.html
@@ -112,7 +112,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>Universal asynchronous receiver/transmitter (UART) HW driver source file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the UART unit was synthesized (IO_UART_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the UART unit was synthesized (IO_UART_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a3543435827204d82755b0a23bdea1296"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a3543435827204d82755b0a23bdea1296">&#9670;&nbsp;</a></span>__neorv32_uart_itoa()</h2>
