--- a/neorv32__uart_8h.html
+++ b/neorv32__uart_8h.html
@@ -108,7 +108,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>Universal asynchronous receiver/transmitter (UART) HW driver header file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the UART unit was synthesized (IO_UART_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the UART unit was synthesized (IO_UART_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a0f89b5d3de3abeca32b85eb1312eed7e"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a0f89b5d3de3abeca32b85eb1312eed7e">&#9670;&nbsp;</a></span>neorv32_uart_available()</h2>
