--- a/neorv32__wdt_8h.html
+++ b/neorv32__wdt_8h.html
@@ -95,7 +95,7 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>Watchdog Timer (WDT) HW driver header file. </p>
 <dl class="section author"><dt>Author</dt><dd>Stephan Nolting</dd></dl>
-<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the WDT unit was synthesized (IO_WDT_USE = true). </dd></dl>
+<dl class="section note"><dt>Note</dt><dd>These functions should only be used if the WDT unit was synthesized (IO_WDT_EN = true). </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a459a918c5a86c0167e8c748352d39827"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a459a918c5a86c0167e8c748352d39827">&#9670;&nbsp;</a></span>neorv32_wdt_available()</h2>
