--- a/md_README.html
+++ b/md_README.html
@@ -112,8 +112,8 @@ Key Features</h3>
 <li>optional embedded memories (instructions/data/bootloader, RAM/ROM) and caches</li>
 <li>timers (watch dog, RISC-V-compliant machine timer)</li>
 <li>serial interfaces (SPI, TWI, UART) and general purpose IO</li>
-<li></li>
-<li><a href="#NEORV32-Processor-Featurexternal bus interface (Wishbone / [AXI4](#AXI4-Connectivity))es">more ...</a></li>
+<li>external bus interface (Wishbone / <a href="#AXI4-Connectivity">AXI4</a>)</li>
+<li><a href="#NEORV32-Processor-Features">more ...</a></li>
 </ul>
 </li>
 <li>Software framework<ul>
@@ -155,7 +155,7 @@ Status</h3>
 <tr class="markdownTableRowEven">
 <td class="markdownTableBodyLeft"><a href="https://stnolting.github.io/neorv32/files.html">SW Framework Documentation (online)</a>   </td><td class="markdownTableBodyLeft"><a href="https://stnolting.github.io/neorv32/files.html"><img src="https://github.com/stnolting/neorv32/workflows/Deploy%20SW%20Framework%20Documentation%20to%20GitHub-Pages/badge.svg" alt="Doc@GitHub-pages" style="pointer-events: none;" class="inline"/></a>    </td></tr>
 <tr class="markdownTableRowOdd">
-<td class="markdownTableBodyLeft"><a href="https://github.com/stnolting/riscv_gcc_prebuilt">Pre-built toolchain</a>   </td><td class="markdownTableBodyLeft"><a href="https://github.com/stnolting/riscv_gcc_prebuilt/actions?query=workflow%3A%22Test+Toolchains%22"><img src="https://github.com/stnolting/riscv_gcc_prebuilt/workflows/Test%20Toolchains/badge.svg" alt="Test Toolchains" style="pointer-events: none;" class="inline"/></a>    </td></tr>
+<td class="markdownTableBodyLeft"><a href="https://github.com/stnolting/riscv_gcc_prebuilt">Pre-built toolchains</a>   </td><td class="markdownTableBodyLeft"><a href="https://github.com/stnolting/riscv_gcc_prebuilt/actions?query=workflow%3A%22Test+Toolchains%22"><img src="https://github.com/stnolting/riscv_gcc_prebuilt/workflows/Test%20Toolchains/badge.svg" alt="Test Toolchains" style="pointer-events: none;" class="inline"/></a>    </td></tr>
 <tr class="markdownTableRowEven">
 <td class="markdownTableBodyLeft"><a href="https://github.com/stnolting/neorv32/blob/master/riscv-compliance/README.md">RISC-V compliance test</a>   </td><td class="markdownTableBodyLeft"><a href="https://github.com/stnolting/neorv32/actions?query=workflow%3A%22RISC-V+Compliance%22"><img src="https://github.com/stnolting/neorv32/workflows/RISC-V%20Compliance/badge.svg" alt="RISC-V Compliance" style="pointer-events: none;" class="inline"/></a>   </td></tr>
 </table>
@@ -164,14 +164,15 @@ To-Do / Wish List / Help Wanted</h3>
 <ul>
 <li>Use LaTeX for data sheet</li>
 <li>Further size and performance optimization</li>
-<li>Add associativity configuration for instruction cache</li>
-<li>Add <em>data</em> cache</li>
+<li>Further expand associativity configuration of instruction cache (4x/8x set-associativity)</li>
+<li>Add data cache</li>
 <li>Burst mode for the external memory/bus interface</li>
 <li>RISC-V <code>F</code> (using <code>[Zfinx](<a href="https://github.com/riscv/riscv-zfinx/blob/master/Zfinx_spec.adoc">https://github.com/riscv/riscv-zfinx/blob/master/Zfinx_spec.adoc</a>)</code>?) CPU extension (single-precision floating point)</li>
 <li>Add template (HW module + intrinsics skeleton) for custom instructions?</li>
 <li>Synthesis results (+ wrappers?) for more/specific platforms</li>
 <li>More support for FreeRTOS (like <em>all</em> traps)</li>
 <li>Port additional RTOSs (like <a href="https://github.com/zephyrproject-rtos/zephyr">Zephyr</a> or <a href="https://www.riot-os.org">RIOT</a>)</li>
+<li>Maybe port <a href="https://circuitpython.org/">CircuitPython</a> (just for fun)</li>
 <li>Implement further RISC-V (or custom?) CPU extensions</li>
 <li>Add debugger (<a href="https://github.com/riscv/riscv-debug-spec">RISC-V debug spec</a>)</li>
 <li>Add memory-mapped trigger to testbench to quit simulation (maybe using VHDL2008's <code>use std.env.finish</code>?)</li>
@@ -338,7 +339,7 @@ NEORV32 Processor-Internal Peripherals and Memories</h3>
 <tr class="markdownTableRowEven">
 <td class="markdownTableBodyLeft">BUSSWITCH   </td><td class="markdownTableBodyLeft">Mux for CPU I &amp; D interfaces   </td><td class="markdownTableBodyRight">65   </td><td class="markdownTableBodyRight">8   </td><td class="markdownTableBodyRight">0   </td><td class="markdownTableBodyRight">0    </td></tr>
 <tr class="markdownTableRowOdd">
-<td class="markdownTableBodyLeft">iCACHE   </td><td class="markdownTableBodyLeft">Proc.-int. nstruction cache (default 1x4x54 bytes)   </td><td class="markdownTableBodyRight">234   </td><td class="markdownTableBodyRight">156   </td><td class="markdownTableBodyRight">8 192   </td><td class="markdownTableBodyRight">0    </td></tr>
+<td class="markdownTableBodyLeft">iCACHE   </td><td class="markdownTableBodyLeft">Proc.-int. nstruction cache (default 1x4x64 bytes)   </td><td class="markdownTableBodyRight">234   </td><td class="markdownTableBodyRight">156   </td><td class="markdownTableBodyRight">8 192   </td><td class="markdownTableBodyRight">0    </td></tr>
 <tr class="markdownTableRowEven">
 <td class="markdownTableBodyLeft">CFU0   </td><td class="markdownTableBodyLeft">Custom functions unit 0   </td><td class="markdownTableBodyRight">-   </td><td class="markdownTableBodyRight">-   </td><td class="markdownTableBodyRight">-   </td><td class="markdownTableBodyRight">-    </td></tr>
 <tr class="markdownTableRowOdd">
@@ -395,7 +396,7 @@ Performance</h2>
 CoreMark Benchmark</h3>
 <p>The <a href="https://www.eembc.org/coremark">CoreMark CPU benchmark</a> was executed on the NEORV32 and is available in the <a href="https://github.com/stnolting/neorv32/blob/master/sw/example/coremark">sw/example/coremark</a> project folder. This benchmark tests the capabilities of a CPU itself rather than the functions provided by the whole system / SoC.</p>
 <div class="fragment"><div class="line">**Configuration**</div>
-<div class="line">Hardware:       32kB IMEM, 16kB DMEM, no caches(!), 100MHz clock</div>
+<div class="line">Hardware:       32kB IMEM, 16kB DMEM, no caches, 100MHz clock</div>
 <div class="line">CoreMark:       2000 iterations, MEM_METHOD is MEM_STACK</div>
 <div class="line">Compiler:       RISCV32-GCC 10.1.0 (rv32i toolchain)</div>
 <div class="line">Compiler flags: default, see makefile</div>
